Додаю файли сайту

--- a/main.html
+++ b/main.html
@@ -47,9 +47,7 @@
                         a type specimen book. It has survived not only five centuries, 
                         but also the leap into electronic typesetting, remaining 
                         essentially unchanged. It was popularised in the 1960s with 
-                        the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus 
-                        PageMaker including versions of Lorem Ipsum.
+                        the release of Letraset sheets containing.
                     </p>
                 </div>
                 <form class="hero-form">
@@ -85,7 +83,7 @@
                     <p>
                         <label class="checkbox-label">
                             <input type="checkbox" required>
-                            Я погоджуюсь із <a href="privacy-policy.html">політикою конфіденційності</a> <img src="photos/icons/required.png" alt="Empty Input" class="input-placeholder">
+                            Я погоджуюсь із <a href="privacy-policy.html">політикою</a> <a href="privacy-policy.html">конфіденційності</a> <img src="photos/icons/required.png" alt="Empty Input" class="input-placeholder">
                         </label>
                     </p>
 
@@ -219,7 +217,7 @@
                     PageMaker including versions of Lorem Ipsum.
                 </p>
 
-                <iframe src="https://www.youtube.com/embed/example" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/JLHvS0qR5Lw?si=OOCnNGA8aW2mx6Nv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
         </section>
@@ -338,8 +336,8 @@
     </main>
     <footer>
         
-        <p>&copy; 2025 Курси програмування у Луцьку. Всі права захищені.</p>
-        <p><a href="privacy-policy.html">Умови політики конфіденційності</a></p>
+        <p> <a href="privacy-policy.html" class="copy">&copy; Copyright 2018-2020 Internet Devels</a></p>
+        <p><a href="privacy-policy.html" class="copy_1">Умови політики конфіденційності</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
