Додаю файли сайту

--- a/main.html
+++ b/main.html
@@ -22,19 +22,17 @@
             </button>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="#">Головна</a></li>
-                    <li><a href="#">Програма курсу</a></li>
-                    <li><a href="#">Відгуки про курс</a></li>
-                    <li><a href="#">Відео</a></li>
-                    <li><a href="#">Ментори</a></li>
-                    <button class="apply-button">Подати заявку</button>
+                    <li><a href="#hero">Головна</a></li>
+                    <li><a href="#course">Програма курсу</a></li>
+                    <li><a href="#testimonials">Відгуки про курс</a></li>
+                    <li><a href="#video">Відео</a></li>
+                    <li><a href="#mentors">Ментори</a></li>
                 </ul>
-                
             </nav>
         </div>
     </header>
     <main>
-        <section class="hero">
+        <section id="hero" class="hero">
             <div class="hero-container">
                 <div class="hero-text">
                     <h1>Курси програмування у Луцьку</h1>
@@ -91,7 +89,7 @@
                 </form>
             </div>
         </section>
-        <section class="course">
+        <section id="course" class="course">
             <h2>Курс «Розробка сайтів»</h2>
             <div class="swiper courseSwiper">
                 <div class="swiper-wrapper">
@@ -141,7 +139,7 @@
             </div>
 
         </section>
-        <section class="testimonials">
+        <section id="testimonials" class="testimonials">
             <h2>Що кажуть студенти наших курсів:</h2>
             <div class="swiper testimonialsSwiper">
                 <div class="swiper-wrapper">
@@ -197,7 +195,7 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-        <section class="video">
+        <section id="video" class="video">
 
             <div class="video-container">
                 
@@ -221,7 +219,7 @@
             </div>
 
         </section>
-        <section class="mentors">
+        <section id="mentors" class="mentors">
             <h2>Наші ментори</h2>
             <div class="swiper mentorsSwiper">
                 <div class="swiper-wrapper">
